<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="sKraftVariablen" Id="{a70d9c51-d2d0-464c-b4cc-df5b8c202c16}">
    <Declaration><![CDATA[TYPE sKraftVariablen :
STRUCT
	Fx					:LREAL;							// Kraft in X-Richtung 
	Fy					:LREAL;							// Kraft in Y-Richtung 
	Fz					:LREAL;							// Kraft in Z-Richtung 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>