<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="Array2_Int" Id="{00bb9ba8-759a-4358-b30c-f2bdbb997cb9}">
    <Declaration><![CDATA[TYPE Array2_Int :
UNION
	arrByte 		:ARRAY[0..1] OF BYTE;
	sValue			:INT; 
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>