<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="Int_2Byte" Id="{4fbd5857-01aa-4d0e-acf1-baf99d09c829}">
    <Declaration><![CDATA[TYPE Int_2Byte :
UNION
	sValue			:INT; 
	arrByte 		:ARRAY[0..1] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>